2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705

	* src/plot2d.c (eval_plots): In generating points for a function plot,
	only x and y were guaranteed to be initialized. Now to be safe we
	initialize all fields.
	Bug #2930705

2010-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/plotstyles.gnu demo/boxplot.dem
	src/datafile.c src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graphics.c src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c:

	New plot style "with boxplot" and corresponding "set style boxplot".

2010-01-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.595

2010-01-10  <ottxor@users.sourceforge.net>

	* share/Makefile.am:  Do not install x11 appdefaults file if no
	X11 support is selected.  Bug #2928271

2010-01-06  Alexander Täschner  <taschna@users.sourceforge.net>

	* config/config.nt src/datafile.c src/eval.c src/plot.c src/stdfn.c
	src/stdfn.h: Define a generic function not_a_number() in which we can
	hide platform-specific implementations.  Add a support for initializing
	NaN and GPVAL_NaN on Windows.
	Bug #2925544

2010-01-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Further revision to maintain the old
	behaviour of the string variables demo.  The demo uses a very unusual
	method to read time strings from the input file, but let's not break
	it unless necessary.

2010-01-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Time format "%s" should be able to
	handle any numeric input. Convert input of the form   'using ($1)' or
	'using (f($1))' to a string so that it can be passed to gstrptime().
	Bug #2899511

2010-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/PostScript/prologues.h: